--- a/css/style.css
+++ b/css/style.css
@@ -264,4 +264,27 @@ li::before {
   
 }
 @media screen and (width <= 600px) {
+  .items{
+    padding: 0.625rem 1rem;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, 300px);
+  }
+  .container{
+    width: 300px;
+    height: 150px;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .wrapper{
+    width: 100px;
+    height: 125px;
+  }
+  .banner-image{
+    width: 100px;
+    height: 125px;
+  }
+  .container h4{
+    width: 150px;
+  }
+  
 }
