--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="part-nav">
-    <a href="/home">Home</a>
+    <a href="/">Home</a>
     <a href="/store">Store</a>
     <a href="/account">Account</a>
     <a href="#about">About Us</a>
