--- a/css/stylesignup.css
+++ b/css/stylesignup.css
@@ -100,7 +100,22 @@ h4{
   font-size: 1.5rem;
 }
 
-
+a{
+  text-decoration: none;
+}
+.sect a{
+  display: flex;
+  justify-content: space-around;
+  border: 2px solid var(--color3);
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-top: 0.5rem;
+}
+.sect a img{
+  object-fit: contain;
+  height: 120px;
+  border-radius: 1rem;
+}
 .container{
   background-color: rgba(238, 238, 238, 0.4);
   color: lime;
