--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
 .burger {
   position: absolute;
   right: 2.5%;
-  width: 3rem;
+  width: 2.75rem;
   aspect-ratio: 1;
   background-color: var(--color2);
   border-radius: 0.5rem;
@@ -238,6 +238,9 @@ li::before {
   .burger {
     opacity: 1;
   }
+  .parent .card{
+    width: 90%;
+  }
   .navbar {
     gap: 1rem;
     justify-content: flex-end;
@@ -248,7 +251,7 @@ li::before {
   .part-nav {
     display: none;
     flex-direction: column;
-    right: calc(10% + 1rem);
+    right: calc(3% + 3rem);
     width: fit-content;
     position: absolute;
     top: 0.5rem;
