--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -74,11 +74,7 @@
         <a href="mailto:support@bytezone.com">support@bytezone.com</a>
       </li>
       <li>Phone: (Toll-Free) +1 800-BYTEZONE (298-3966)</li>
-      <li>Live Chat: Available on weekdays from 9:00 AM to 5:00 PM PST</li>
-      <li>
-        Visit our <a href="stores.html">store locator</a> to find a Byte Zone
-        near you.
-      </li>
+      <li>Live Chat: Available on weekdays from 9:00 AM to 5:00 PM IST</li>
     </ul>
     <p>
       Follow us on social media for the latest news, exclusive deals, and tech
