--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,7 @@
 <nav class="navbar">
+  <div class="title">
+    <img src="../../img/Logo_Byte.png" alt="logo">
+  </div>
   <div class="part-nav">
     <a href="/">Home</a>
     <a href="/store">Store</a>
