--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <main id="usrRecord">
-      <button onclick="handleUser()">Return all users</button>
+      <button onclick="getData()">Return all users</button>
             
     </main>
     <p>This is the admin page</p>
