--- a/views/partials/storeSwitchItemType.ejs
+++ b/views/partials/storeSwitchItemType.ejs
@@ -1,6 +1,7 @@
 <script>
   const section = document.getElementById("laptop");
   const ls = ["laptop", "desktop", "accessory"];
+  document.getElementById("laptopHead").style.backgroundColor = "rgba(0,0,0,0.4)"
 
   for (let i = 0; i < ls.length; i++) {
     if (ls[i] != "laptop") {
@@ -11,8 +12,8 @@
   }
 
   function get(params) {
-    const node = params.innerText;
-
+    params.style.backgroundColor = "rgba(0,0,0,0.4)";
+    const node = params.innerText.toLowerCase();
     const section = document.getElementById(node);
 
     setTimeout(() => {
@@ -24,6 +25,7 @@
           const hide = document.getElementById(ls[i]);
           hide.style.height = "0";
           hide.style.opacity = "0";
+          document.getElementById(`${ls[i]}Head`).style.backgroundColor = "transparent";
         }
       }
     }, 350);
