added css for filtering item type

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --color3: #1fe7f1;
   --color4: #eeeeee;
   --color5: #e7b597;
+  --color6: #4880FF;
 }
 * {
   margin: 0;
@@ -253,9 +254,11 @@ li::before {
 }
 
 
-.navigateType h3{
-  padding: 0.25rem 1rem;
+.navigateType h4{
+  font-size: 1.125rem;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
+  color: var(--color6);
 }
 
 @media screen and (width <= 992px) {
