--- a/css/adminStyle.css
+++ b/css/adminStyle.css
@@ -4,7 +4,7 @@
   --color3: #4880FF;
   --color4: #eee;
   --color5: #00B69B;
-  --color6: #00B69B;
+  --color6: #00ecc9;
 }
 * {
   margin: 0;
@@ -18,96 +18,83 @@
 body {
   background-color: var(--color1);
 }
-nav {
-  width: 90%;
-  height: 3.5rem;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  margin: auto;
-}
 
-.part-nav {
-  display: flex;
+.parentAll{
   width: 100%;
+  min-height: 100dvh;
+  display: flex;
   justify-content: space-between;
 }
 
-.burger {
-  position: absolute;
-  right: 2.5%;
-  width: 2.75rem;
-  aspect-ratio: 1;
+.navigate{
+  position: fixed;
+  width: 20%;
+  min-height: 100dvh;
+  padding: 2rem;
+  overflow: auto;
   background-color: var(--color2);
-  border-radius: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  opacity: 0;
 }
 
-.burger-line {
-  width: 70%;
-  height: 0.2rem;
-  background-color: #00adb5;
-  border-radius: 0.1rem;
-  transition: all 0.25s ease-in-out;
-}
-nav a {
-  color: var(--color3);
-  font-weight: 500;
-  font-size: 1.75rem;
-  text-decoration: none;
-  padding: 0.625rem 1rem;
-  border-radius: 1.5rem;
-}
-nav a:hover {
-  background-color: rgba(57, 62, 70, 0.322);
-}
-.adminNav {
-    margin-top: 1rem;
-    width: 90%;
-    
-}
-.title img {
-  height: 3rem;
-  aspect-ratio: 1;
+.navigate h1{
+  font-size: 2.5rem;
 }
 
-.title {
-  display: none;
+.nav > ul{
+  padding: 1rem;
+  list-style-type: none;
 }
-p {
-  color: var(--color4);
+
+.nav > ul > li{
+  margin-top: 0.5rem;
   font-size: 1.25rem;
+  font-weight: bold;
+  color: var(--color6)
 }
-@media screen and (width <= 768px) {
-  .title {
-    display: flex;
-  }
-  .burger {
-    opacity: 1;
-  }
-  .navbar {
-    gap: 1rem;
-    justify-content: space-between;
-    margin-top: 0.5rem;
-    position: relative;
-    z-index: 3;
-  }
-  .part-nav {
-    display: none;
-    flex-direction: column;
-    right: calc(3% + 3rem);
-    width: fit-content;
-    position: absolute;
-    top: 0.5rem;
-    background: rgba(0, 0, 0, 0.375);
-    backdrop-filter: blur(10px);
-    border-radius: 1rem;
-    border: 1px solid gray;
-  }
+
+.line{
+  width: 100%;
+  margin: auto;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--color2);
 }
-@media screen and (width <= 600px) {
+
+.content{
+  width: 80%;
+  position: relative;
+  min-height: 100%;
+  margin-left: 20%;
+}
+
+.top{
+  padding: 0.625rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: var(--color2);
+}
+
+.partNav{
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  margin-right: 1rem;
+}
+
+.cardSmallNav{
+  color: var(--color6);
+}
+
+.partNav button{
+  padding: 0.25rem 0.5rem;
+  font-size: 1rem;
+  background-color: transparent;
+  color: var(--color4);
+  border-radius: 1rem;
+  border: 2px solid var(--color3);
+}
+
+h1, h2, h3, h4, h5, h6{
+  color: var(--color3);
 }
