--- a/css/adminStyle.css
+++ b/css/adminStyle.css
@@ -95,6 +95,31 @@ body {
   border: 2px solid var(--color3);
 }
 
+
+#dashboard{
+  color: var(--color4);
+  padding: 1rem;
+}
+
+.dashboard-part{
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  gap: 1.5rem;
+}
+
+.smallCardDash{
+  padding: 1.5rem;
+  min-width: 240px;
+  min-height: 120px;
+  border-radius: 25px;
+  background-color: var(--color2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
 h1, h2, h3, h4, h5, h6{
   color: var(--color3);
 }
