--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -34,18 +34,35 @@
             <button>Notifications</button>
             <h4>User</h4>
             <% if (locals.name) { %>
-              <div class="cardSmallNav">
-               <p id="name"><%= name.userName %></p>
-                <p id="role">ADMIN</p>
-              </div>
+            <div class="cardSmallNav">
+              <p id="name"><%= name.userName %></p>
+              <p id="role">ADMIN</p>
+            </div>
             <% } else { %>
-             <div class="cardSmallNav">
-                <p id="name">No Name</p>
-                <p id="role">ADMIN</p>
-             </div>
+            <div class="cardSmallNav">
+              <p id="name">No Name</p>
+              <p id="role">ADMIN</p>
+            </div>
             <% } %>
           </section>
         </nav>
+        <main id="dashboard">
+          <h2>Dashboard</h2>
+          <section class="dashboard-part">
+            <div class="smallCardDash">
+              <h4 class="title">Total User</h4><br>
+              <p><%= userCount %></p>
+            </div>
+            <div class="smallCardDash">
+              <h4 class="title">Total Sales</h4><br>
+              <p><%= itemsSold %></p>
+            </div>
+            <div class="smallCardDash">
+              <h4 class="title">Sales Amount</h4><br>
+              <p>Rupees <%= salesAmount %></p>
+            </div>
+          </section>
+        </main>
       </main>
     </main>
   </body>
