change Image Storage To Buffer

--- a/views/store.ejs
+++ b/views/store.ejs
@@ -26,7 +26,7 @@
               <a class="container" href=<%= `/store/singleProduct?item=${element.id}&type=${itemType.type}` %>>
                 <div class="wrapper">
                   <div class="banner-image">
-                    <img src="<%= element.image %>" alt="<%= element.productName %>">
+                    <img src="/img/image/<%= element.image %>" alt="<%= element.productName %>">
                   </div>
                 </div>
                 <h4><%= element.productName %></h4>
