--- a/css/adminStyle.css
+++ b/css/adminStyle.css
@@ -80,7 +80,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.025);
+  background-color: white;
   padding: 0.25rem;
   overflow: hidden;
 }
