--- a/css/stylesignup.css
+++ b/css/stylesignup.css
@@ -12,7 +12,7 @@
 .card {
   background-color: rgba(57, 62, 70, 0.75);
   backdrop-filter: blur(10px);
-  width: 70%;
+  width: 60%;
   padding: clamp(1rem, 2.5vw, 2rem);
   border-radius: clamp(1.5rem, 3.5vw, 3rem);
   transition: all 0.3s ease-in-out;
@@ -122,7 +122,7 @@ a {
   margin-top: 0.5rem;
 }
 a img {
-  min-height: 100px;
+  min-height: 72px;
   max-height: 140px;
   border-radius: 1rem;
   object-fit: contain;
@@ -138,6 +138,9 @@ a img {
 }
 .content-image {
   /* width: 30%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
   object-fit: cover;
 }
 .container {
@@ -165,7 +168,7 @@ a img {
     padding: 0.5rem;
   }
   .card {
-    min-width: 400px;
+    min-width: 336px;
   }
 
   .parent .sign-up-card,
@@ -177,10 +180,14 @@ a img {
 .del img {
   position: relative;
   z-index: 1;
-  height: 2rem;
-  width: 2rem;
+  height: 1.75rem;
+  width: 1.75rem;
   background-color: transparent;
 }
 .del {
   border: none;
+  padding: 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
