--- a/views/addStock.ejs
+++ b/views/addStock.ejs
@@ -75,5 +75,6 @@
         <button type="submit">Submit</button>
       </form>
     </main>
+    <%- include("./partials/scripts") %>
   </body>
 </html>
