--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -61,6 +61,16 @@
             </div>
             <div class="smallCardDash">
               <div class="smallCardDash-img">
+                <img src="../img/Icon4.svg" alt="user" />
+              </div>
+              <div class="smallCardDash-content">
+                <h4 class="title">Active User</h4>
+                <br />
+                <p><%= activeUser %></p>
+              </div>
+            </div>
+            <div class="smallCardDash">
+              <div class="smallCardDash-img">
                 <img src="../img/Icon1.svg" alt="user" />
               </div>
               <div class="smallCardDash-content">
@@ -114,16 +124,30 @@
                     </div>
                   </div>
                   <% itemType.item.forEach(element => { %>
-                    <div class="container">
-                      <div class="banner-image">
-                        <img src="/img/image/<%= element.image %>" alt="<%= element.productName %>">
-                       </div>
-                       <div class="details">
-                         <p> <%= element.productName %> </p>
-                         <p> Rupees <%= element.price %> </p>
-                         <p> <%= element.qty %> </p>
+                    <% if (element.qty>0) { %>
+                      <div class="container">
+                        <div class="banner-image">
+                          <img src="/img/image/<%= element.image %>" alt="<%= element.productName %>">
+                         </div>
+                         <div class="details">
+                           <p> <%= element.productName %> </p>
+                           <p> Rupees <%= element.price %> </p>
+                           <p> <%= element.qty %> </p>
+                        </div>
                       </div>
-                    </div>
+                    <% } else { %>
+                      <div class="container" style="opacity: 0.2;background-color: red;">
+                        <div class="banner-image">
+                          <img src="/img/image/<%= element.image %>" alt="<%= element.productName %>">
+                         </div>
+                         <div class="details">
+                           <p> <%= element.productName %> </p>
+                           <p> Rupees <%= element.price %> </p>
+                           <p> <%= element.qty %> </p>
+                        </div>
+                      </div>
+                    <% } %>
+
                   <% }) %>
                 </div>
               </div>
@@ -133,6 +157,6 @@
         
       </main>
     </main>
-    <%- include("./partials/storeSwitchItemType") %>
+    <%- include("./partials/storeSwitchItemType") %><%- include("./partials/scripts") %>
   </body>
 </html>
